[fix] Use jsonmark for formatting

--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "dependencies": {
     "github-url": "~1.0.0",
-    "mit": "0.0.0"
+    "mit": "0.0.0",
+    "jsonmark": "0.0.0"
   },
   "devDependencies": {
     "tap": "~0.4.0"
