--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "github-url": "~1.0.0",
     "mit": "0.0.0",
-    "jsonmark": "0.0.0"
+    "jsonmark": "~0.0.0",
+    "async": "~0.2.9"
   },
   "devDependencies": {
     "tap": "~0.4.0"
